corrected styling on smaller screens again

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -385,7 +385,7 @@ h2 {
 @media(max-width: 992px){
     .project-detail-container {
         text-align: center;
-        padding-left: 0;
+        padding-left: 15px;
     }
 
     .project-detail-subheader:after{
